Hide 'Rename' item in file context menu for shortcut or desktop entry.
Unfortunately GIO doesn't support changing the .desktop files
but treats them as usual files, we can rename only file names,
not display names so we have no choice but disable this option

--- a/NEWS
+++ b/NEWS
@@ -255,6 +255,11 @@ Changes on 1.2.0 since 1.1.0:
     remember file on which menu was activated and use it in own callback
     if it was activated.
 
+* Disabled attempt to drop files into folders on read-only file system.
+
+* The item "Delete" in context menu now changes appearance between Trash
+    and Remove in dependency if Shift key is pressed.
+
 
 Changes on 1.1.0 since 1.0.1:
 
